# cpython-docs-compendium

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: python-ci.yaml  stdlib-introspect.yaml  stdlib-introspect.yml
tools/: coverage_diff.py  merge_summary.py  ruff.toml  stdlib_introspect.py
