[project]
name = "cpython-docs-compendium"
version = "2026.06.20"
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@tailstory.dev" },
]
requires-python = ">=3.14"
dependencies = [
    "sphobjinv>=2.4",
]

[dependency-groups]
dev = [
    # DX
    "nox>=2026.4.10",
    "prek>=0.4.4",
    # Linters
    "ruff>=0.15.17",
    "mypy>=2.1.0",
    "ty>=0.0.49",
]

[tool.uv]
# Sync with Dependabot's uv version
required-version = ">=0.11.8"
exclude-newer = "P7D"

[tool.ruff]
line-length = 120
cache-dir = ".cache/ruff"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "COM812",  # conflicts with the formatter
    "ISC001",  # conflicts with the formatter
    # No `from __future__ import annotations`, so annotation imports are evaluated at
    # runtime and cannot move into a TYPE_CHECKING block.
    "TC001",
    "TC002",
    "TC003",
]

[tool.ruff.lint.per-file-ignores]
"tools/*.py" = [
    "T201",     # CLI tools: the printed report is the deliverable
    "FBT",      # internal recursion helpers; keyword-only bools add churn, not safety
    "PLR0913",  # record/report builders take one parameter per output column by design
]
# stdlib_introspect runs across the whole introspect matrix (older interpreters
# included), so it keeps back-compatible idioms: TypeAlias over the newer `type`
# statement (UP040). It also imports arbitrary modules, where a broad except is
# intentional (BLE001).
"tools/stdlib_introspect.py" = ["BLE001", "UP040"]
"tools/coverage_diff.py" = ["S310"]  # fetches a fixed https://docs.python.org inventory URL

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
pretty = true
num_workers = 4
native_parser = true # required by num_workers
cache_dir = ".cache/mypy"

[[tool.mypy.overrides]]
module = ["sphobjinv.*"]
ignore_missing_imports = true  # sphobjinv ships no py.typed marker

# Still need to tell Mypy to ignore these
[tool.ty.rules]
unused-ignore-comment = "ignore"
